# SCOPE

./: LICENSE  README.md
C++/: CMakeLists.txt
C++/cnpy/: CMakeLists.txt  cnpy.cpp  cnpy.h
C++/examples/: CMakeLists.txt  run.cpp
C++/examples/.ipynb_checkpoints/: SMPLify-checkpoint.cpp  SMPLifyVideoH36M-checkpoint.cpp
C++/scope/: CMakeLists.txt
C++/scope/base/: Pose.h  Types.h
C++/scope/factor/: DepthCameraFactor.cpp  DepthCameraFactor.h  EulerAngleConstFactor.cpp  EulerAngleConstFactor.h  ExtraPinholeCamera.cpp  ExtraPinholeCamera.h  Factor.cpp  Factor.h  Factors.h  FullJointExtraPinholeCameraFactor.cpp  FullJointExtraPinholeCameraFactor.h  FullJointPinholeCameraFactor.cpp  FullJointPinholeCameraFactor.h  FullVertexExtraPinholeCameraFactor.cpp  FullVertexExtraPinholeCameraFactor.h  FullVertexPinholeCameraFactor.cpp  FullVertexPinholeCameraFactor.h  JointConstFactor.cpp  JointConstFactor.h  JointDepthCameraFactor.cpp  JointDepthCameraFactor.h  JointExtraPinholeCameraFactor.cpp  JointExtraPinholeCameraFactor.h  JointFactor.cpp  JointFactor.h  JointLimitFactor.cpp  JointLimitFactor.h  JointPinholeCameraFactor.cpp  JointPinholeCameraFactor.h  POFFactor.cpp  POFFactor.h  ParameterFactor.cpp  ParameterFactor.h  PinholeCameraFactor.cpp  PinholeCameraFactor.h  PoseConstFactor.cpp  PoseConstFactor.h  PoseFactor.cpp  PoseFactor.h  RelPOFFactor.cpp  (+11 more)
C++/scope/initializer/: ArmInitializer.cpp  ArmInitializer.h  ArmRefiner.cpp  ArmRefiner.h  ExtTorsoInitializer.cpp  ExtTorsoInitializer.h  HeadInitializer.cpp  HeadInitializer.h  Initializer.cpp  Initializer.h  Initializers.h  LegInitializer.cpp  LegInitializer.h  TorsoInitializer.cpp  TorsoInitializer.h
C++/scope/initializer/factor/: DepthCameraFactor.cpp  DepthCameraFactor.h  EulerAngleConstFactor.cpp  EulerAngleConstFactor.h  Factor.cpp  Factor.h  Factors.h  JointConstFactor.cpp  JointConstFactor.h  JointFactor.cpp  JointFactor.h  JointLimitFactor.cpp  JointLimitFactor.h  POFFactor.cpp  POFFactor.h  PinholeCameraFactor.cpp  PinholeCameraFactor.h  PoseConstFactor.cpp  PoseConstFactor.h  PoseFactor.cpp  PoseFactor.h
C++/scope/math/: SO3.h  macro.h  operation.h  skew3.h
C++/scope/model/: Link.h  Model.cpp  Model.h  SMPL.cpp  SMPL.h
C++/scope/optimizer/: Optimizer.cpp  Optimizer.h  SMPLify.cpp  SMPLify.h
C++/scope/utils/: InitialInfo.h  Initialization.cpp  Initialization.h  JointConstInfo.h  KeyPointInfo.h  Setup.cpp  Setup.h  Stopwatch.h
examples/: keypoints.json
model/: joint_prior.json  preprocess.py
